#622670 by neclimdul: Fixed clipped folder icons when no posts in forum.

--- a/styles/cloudless_day/advanced_forum.cloudless_day.images.css
+++ b/styles/cloudless_day/advanced_forum.cloudless_day.images.css
@@ -2,6 +2,7 @@
 td.forum-icon {
   text-indent: -9999px;
   width: 50px;
+  height: 50px;
 }
 
 .forum-folder {
